--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -3,26 +3,30 @@
     width:16vw;
     color: white;
     overflow-x: hidden;
-    max-height: 100vh;
+    max-height: 90vh;
     overflow-y: scroll;
-    scrollbar-width: thin;
 }
 #nav-bar>ul{
     padding-left:25px;
 }
 #nav-bar>ul>li{
     list-style: none;
-    font-size: 15px;
-    padding:10px 0;
+    font-size: 14px;
+    padding:8px 0;
+    line-height: 1em;
 }
-.nav-icons{
-    vertical-align:bottom;
-    padding-right:15px;
+.nav-icons,span{
+    display: inline-block;
+    padding-right:14px;
+    vertical-align: middle;
 }
 hr{
     text-align: middle;
     width: 90%;
     opacity: 0.3; 
+}
+#test{
+    font-size: 24px;
 }
 
 
