--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,9 @@ button{
 }
 #body-section{
   display:flex;
-  justify-content: center;
+  justify-content: space-around;
+  
+
 }
 
 #search-body{
@@ -19,9 +21,8 @@ button{
 }
 #cards{
   display:flex;
-  flex: 1;
   width: 100%;
-  justify-content: space-evenly;
+    justify-content: space-evenly;
   flex-wrap: wrap;
   padding-top: 28px;
 }
