--- a/client/src/styles/SignIn.css
+++ b/client/src/styles/SignIn.css
@@ -6,17 +6,18 @@
     align-self: center;
     margin-top: 70px;
     height: 30em;
-    border:2px solid rgba(255, 255, 255, 0.103);
+    border:1px solid rgba(255, 255, 255, 0.075);
     border-radius: 4px;
     width: 30vw;
     box-shadow: 0px 0px 1px 1px rgba(136, 136, 136, 0.397); /*any color you want*/
     color: white;
 }
 #sign-in>input{
-    border:1px solid rgba(255, 255, 255, 0.5);
+    border:1px solid rgba(255, 255, 255, 0.185);
     border-radius: 5px;
     background-color: inherit;
     padding: 5px;
+    color: white;
 }
 #sign-in>button{
     background-color: #222222;
