--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,8 +12,7 @@ button{
 #body-section{
   display:flex;
   justify-content: space-around;
-  
-
+  flex-direction: column;
 }
 
 #search-body{
@@ -21,12 +20,21 @@ button{
   display:flex;
   flex-direction: column;
 }
+#content{
+  display:flex;
+
+}
 #cards{
   display:flex;
   width: 100%;
-    justify-content: space-evenly;
-  flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-direction: row;
   padding-top: 28px;
+}
+@media screen and (max-width:1200px) {
+  #cards{
+    flex-direction: column;
+  }
 }
 button{
   cursor: pointer;
