--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -1,5 +1,4 @@
 #nav-bar{
- flex:1;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -7,32 +6,12 @@
     color: white;
     left:0;
     /* remember this - position sticky needs some threshold to get activated thus we make top 10px */
-    top:0px;
-    padding-top: 10px;
+    top:0;
+    width: 18%;
     position: sticky; 
-    background-color: #121212;
     z-index: 5;    
 }
-#logo-container{
-    align-self:center;
-    display: flex;
-    align-items: center;
-    padding:5px 0 12px 10px;
-}
 
-#logo{
-    display: flex;
-    padding-left: 15px;
-    align-items: center;
-    color: white;
-    font-family: "teko";
-    height: 100%;
-}
-#logo>h2{
-    padding-left: 2px;
-    font-size: 26px;
-    height: 32px;
-}
 #nav{
     overflow-y: scroll;
     overflow-x: hidden;
@@ -40,8 +19,7 @@
 }
 
 .nav-list{
-    padding-top: 10px;
-    padding-left: 20px;
+    padding-left: 18px;
     font-weight: 300;
     overflow-x:hidden ;
     overflow-y: scroll;
@@ -67,7 +45,7 @@
     color: #0081C9;
     border:1px solid rgba(255, 255, 255, 0.3);
     height: 2.5em;
-    border-radius: 10px;
+    border-radius: 5px;
     font-size: 14px;
     font-weight: 500;
     cursor:pointer;   
@@ -99,11 +77,3 @@ hr{
     font-size: 24px;
 }
 
-
-@media screen and (max-width:1200px){
-    #nav-bar{
-      display: none;
-    }
-  }
-  
-  
