--- a/client/src/styles/SignIn.css
+++ b/client/src/styles/SignIn.css
@@ -8,7 +8,7 @@
     height: 30em;
     border:1px solid rgba(255, 255, 255, 0.075);
     border-radius: 4px;
-    width: 30vw;
+    width: 30%;
     box-shadow: 0px 0px 1px 1px rgba(136, 136, 136, 0.397); /*any color you want*/
     color: white;
 }
@@ -23,5 +23,5 @@
     background-color: #222222;
     border:8px solid transparent;
     color: white;
-    border-radius: 5px;
+    border-radius: 2px;
 }
