--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -7,9 +7,8 @@
     left:0;
     /* remember this - position sticky needs some threshold to get activated thus we make top 10px */
     top:0;
-    width: 18%;
     position: sticky; 
-    z-index: 5;    
+    z-index: 5;   
 }
 
 #nav{
@@ -19,6 +18,7 @@
 }
 
 .nav-list{
+
     padding-left: 18px;
     font-weight: 300;
     overflow-x:hidden ;
@@ -34,7 +34,8 @@
     padding:7px 10px;
     line-height: 1em;
     border-radius: 10px;
-    
+    opacity: 0.9;
+    font-weight: 400;
 }
 #signin-btn{
     display: flex;
@@ -56,17 +57,17 @@
 
 .nav-items:hover{
     background-color:#a0a0a02f;
-    opacity:1;
+    opacity: 1;
 }
-.nav-items>span{
-    opacity: 0.9;
-    
-}
+
 
 .nav-icons{
     padding:0;
     margin:0;
     padding-right: 10px;
+    
+    
+
 }
 hr{
     text-align: middle;
