--- a/client/src/styles/Searchbar.css
+++ b/client/src/styles/Searchbar.css
@@ -8,8 +8,13 @@
     background-color: inherit;
     padding: 18px 26px 5px 26px;
     z-index: 4;
-    
-
+}
+#hamburger{
+    cursor:pointer;
+    opacity: 0.8;
+}
+#hamburger:hover{
+    opacity: 1;
 }
 #logo-container{
     display: flex;
@@ -31,12 +36,12 @@
     font-size: 26px;
     height: 32px;
 }
+
 #icon{
     vertical-align: bottom;
 }
 
 #search-area{
-    margin: 0 200px;
     display: flex;
     width: 44vw;
     height: 2.5em;
@@ -123,3 +128,40 @@
     align-items: center;
     justify-content: space-between;
 }
+@media screen and (max-width:1200px) {
+    
+#search-btn{
+    width: auto;
+}
+#search-area{
+    padding:0 10px;
+    width: auto;
+}
+#search-bar{
+    padding: 10px;
+}
+}
+@media screen and (max-width:400px) {
+    #search-btn{
+        width: auto;
+    }
+    #search-area{
+        padding:0 10px;
+        width: auto;
+    }
+    #search-bar{
+        padding: 0;
+        justify-content: space-between;
+    
+    }
+    #logo-container{
+        padding:5px 0;
+        width: 80% ;
+        justify-content:center;
+        align-items: center;
+    }
+    #logo>h2{
+        font-size: 24px;
+        vertical-align: bottom;
+    }
+    }
