--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,10 +30,13 @@ button{
   justify-content: space-evenly;
   flex-direction: row;
   padding-top: 28px;
+  
 }
 @media screen and (max-width:1200px) {
   #cards{
     flex-direction: column;
+    align-items: center;
+
   }
 }
 button{
