--- a/client/src/styles/SignIn.css
+++ b/client/src/styles/SignIn.css
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    padding:0
 }
 #sign-in{
     display: flex;
@@ -15,7 +16,9 @@
     box-shadow: 0px 0px 1px 1px rgba(136, 136, 136, 0.397); /*any color you want*/
     color: white;
     width: 30%;
-    padding:20px;
+    padding:10px 20px;
+    transition-duration: 0.2s;
+    transform: translateX(-40px);
 }
 #sign-in>input{
     border:1px solid rgba(255, 255, 255, 0.185);
