--- a/client/src/styles/Upload.css
+++ b/client/src/styles/Upload.css
@@ -5,7 +5,6 @@
     justify-content: center;
     position: absolute;
     width: 500px;
-    height: 300px;
     color:white;
     top: 100px;
     font-size: 34px;
@@ -21,7 +20,7 @@ h4{
     margin:0;
 }
 #upload>div{
-   width: 350px; 
+   width: 90%; 
    display: flex;
    align-items: center;
    justify-content: space-between;
@@ -38,7 +37,7 @@ h4{
 .upload-div{
     border:1px solid rgba(255, 255, 255, 0.4);
     border-radius:12px;
-    width: 100px;
+    max-width: 200px;
     transition-duration: 0.1s;
     padding:2px 0;
 }
