--- a/client/src/styles/Video.css
+++ b/client/src/styles/Video.css
@@ -26,7 +26,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 0;
-    
 }
 #channel-container{
     display:flex;
@@ -77,7 +76,6 @@
     display: flex;
     justify-content: space-between;
     gap:15px;
-
 }
 .vid-icon{
     vertical-align: middle;
@@ -129,16 +127,17 @@ textarea:focus-visible{
     gap:12px;
 }
 #cmnt-body{
-    width:44.8em;
     font-size: 15px; 
-    
-
+    display: flex;
+    flex-direction: column;
+    gap:2px;
 }
 #cmnts-btn{
     display:flex;
     width: 15%;
     justify-content: space-between;
     padding-top: 5px;
+    gap:7px;
 }
 
 
@@ -156,9 +155,39 @@ h2,h3,p{
     width:auto;
 }
 
+
 @media screen and (max-width:1200px) {
     #video-div{
         flex-direction: column;
+    }
+    #video-section{
+        max-width: 100vw;
+    }
+    #suggestions{
+        display: flex;
+        flex-direction: column;
+        gap:15px;
+        padding: 20px 0;
+    }
+    #channel-container{
+        flex-direction: column;
+    }
+
+    #vid-icons{
+        flex-direction: column;
+
+        align-items: center;
+        justify-content: center;
+    }
+    #channel-details{
+        flex-direction: column;
+        width: auto;
+        gap:10px
+    }
+    #video-body{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
     }
 }
   
